clusters/k4/kubernetes/apps/media/qbittorrent-samba-server/app/networkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: qbittorrent-samba-server
spec:
  nodeSelector:
    matchLabels:
      node-role.kubernetes.io/control-plane: ""
  ingress:
    - fromCIDRSet:
        - cidrGroupRef: lan
      toPorts:
        - ports:
            - port: "139"
              protocol: TCP
            - port: "445"
              protocol: TCP
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: &app qbittorrent-samba-server
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: *app
      app.kubernetes.io/instance: *app
  ingress:
    - fromCIDRSet:
        - cidrGroupRef: lan
      toPorts:
        - ports:
            - port: "139"
              protocol: TCP
            - port: "445"
              protocol: TCP
  egress:
    - toCIDRSet:
        - cidrGroupRef: lan
